https://github.com/ManalLiaquat/push-notification-demo/tree/master/src

https://medium.freecodecamp.org/how-to-add-push-notifications-to-a-web-app-with-firebase-528a702e13e1


// // Authentication
~ Fix Image Upload Screen Size,
~ Remove Image from array When clicked on X,
~ Add A Loading Icon shown when upload Button is clicked,

// // Dashboard
~ Only Get User with atleast one match,
~ show more than one picture of requester,