@@ -8,7 +8,7 @@ html,body{
   border: 0px;
   height:100%;
   width:100%;
-  overflow: hidden;
+  overflow: auto;
 }
 .myComponent > h1{
     font-family: 'Dancing Script', cursive;
